test/fail/basic_syntax/cast_with_subtypes.lly
#[
SyntaxError: Casts from Dynamic cannot include subtypes.
    from cast_with_subtypes.lly:6:
]#

Dynamic(10).@(List[Integer])
